# Stellar-4

./: ARCHITECTURE.md  DEPLOYMENT.md  README.md  package-lock.json  package.json  render.yaml
RakshaCircle/: .env.example  README.md  TEST_BACKEND.ps1  TEST_BACKEND.sh
backend/: .env.example  app.js  server.js
backend/config/: env.js  startupChecks.js
backend/plugins/: auth.js
backend/routes/navigation/: index.js
backend/routes/raksha/: index.js
backend/scripts/: smoke.mjs
backend/services/: mapsService.js  productionReadinessService.js  safetyAnalysisService.js  safetyAssistant.js  sorobanService.js
contracts/raksha-safety/: .env.example  Cargo.toml  README.md
contracts/raksha-safety/src/: lib.rs
docs/: COMMUNITY_CONTRIBUTION.md  PRODUCTION_READINESS.md  SECURITY_CHECKLIST.md  USER_GUIDE.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  vite-env.d.ts
frontend/src/components/: ChatAssistant.css  ChatAssistant.tsx  ErrorBoundary.tsx  NirvhayaPopup.css  NirvhayaPopup.tsx  ProductionReadinessPanel.tsx
frontend/src/components/map/: LiveMap.tsx  RouteInputForm.tsx
frontend/src/components/safety/: SafetyAnalysisReport.tsx  TrustedContactsModal.tsx
frontend/src/context/: RouteContext.tsx
frontend/src/hooks/: useLiveTracking.ts  useRouteSafety.ts  useSafetyAssistant.ts
frontend/src/pages/: CheckRoute.tsx  SubmissionMvp.css  SubmissionMvp.tsx
frontend/src/services/: freighter.ts  navigation.ts  rakshaMvp.ts
