[package]
name = "raksha-safety"
version = "0.1.0"
edition = "2021"
publish = false

[features]
testutils = []

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=20.0.0"

[dev-dependencies]
soroban-sdk = { version = "=20.0.0", features = ["testutils"] }

[package.metadata.defs]
raksha_safety_contract = { xdr_version = "high_res_code_points" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
debug = true
